--- a/style.css
+++ b/style.css
@@ -1,1 +1,33 @@
-u-uy
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
+
+header {
+	background-color: #e7e7e7;
+	padding: 20px 0px;
+	text-align: center;
+}
+
+body {
+	padding: 0px;
+	margin: 0px;
+	font-family: 'Montserrat', sans-serif;
+	background-color: rgb(231, 224, 216);
+}
+
+ul {
+	padding:0;
+	margin:0;
+    margin-left: auto;
+    margin-right: auto;
+	display: table;
+}
+
+li {
+	display: table-cell;
+	padding: 10px;
+}
+
+ul li a {
+	text-decoration: none;
+	font-weight: bolder;
+	color: gray;
+}
