--- a/style.css
+++ b/style.css
@@ -26,8 +26,40 @@ li {
 	padding: 10px;
 }
 
+ul li a:hover
+{
+    color : rgb(56, 42, 42);
+}
+
 ul li a {
 	text-decoration: none;
 	font-weight: bolder;
 	color: gray;
+}
+
+#intro {
+	margin-bottom: 15px;
+	margin-top: 15px;
+	font-size: 20px;
+	max-width: 50%;
+}
+
+#boutton {
+	text-decoration: none;
+	margin-top: 30px;
+	margin-left: 70px;
+	padding: 5px;
+	color: white;
+	background-color: black;
+	display:block;
+	text-align:center;
+	width:450px;
+	line-height:30px;
+	border-radius: 5px;
+	font-size: 12px;
+}
+
+#p1 {
+	font-size: 20px;
+	max-width: 50%;
 }
