--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
 header {
-	background-color: #e7e7e7;
+	background-color: #ddd4cc;
 	padding: 20px 0px;
 	text-align: center;
 }
 
 body {
-	padding: 0px;
+	padding: 5px;
 	margin: 0px;
 	font-family: 'Montserrat', sans-serif;
 	background-color: rgb(231, 224, 216);
@@ -41,7 +41,7 @@ ul li a {
 	margin-bottom: 15px;
 	margin-top: 15px;
 	font-size: 20px;
-	max-width: 50%;
+	max-width: 80%;
 }
 
 #boutton {
@@ -61,5 +61,34 @@ ul li a {
 
 #p1 {
 	font-size: 20px;
-	max-width: 50%;
+	max-width: 80%;
+}
+
+#p2 {
+	font-size: 20px;
+	max-width: 80%;
+	color: #993300;
+}
+
+#titreliste {
+	margin-top: 30px;
+}
+
+#nav {
+	list-style-type: disc;
+	margin-left: 50px;
+}
+
+#ingre {
+	display: list-item;
+	padding: 7px;
+	font-size: 20px;
+}
+
+
+#nav2 {
+	list-style-type: decimal;
+	margin-left: 50px;
+	text-decoration: none;
+	max-width: 80%;
 }
